Fix documents subheader styling on Safari

--- a/style/layout/_subnav.scss
+++ b/style/layout/_subnav.scss
@@ -40,11 +40,11 @@
 				margin: 2rem auto;
 
 				h2 {
-					margin-top: 0;
-					padding-top: 1rem;
+					margin: 0.75em 0;
 				}
 
 				section {
+					overflow: auto;
 					break-inside: avoid-column;
 				}
 			}
